artifactory/artifactory.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: artifactory-k8s-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: artifactory
        group: artifactory-k8s-demo

    spec:
      containers:
        - name: artifactory
          image: docker.bintray.io/jfrog/artifactory-oss:latest
          ports:
          - containerPort: 8081
          volumeMounts:
          - mountPath: "/var/opt/jfrog/artifactory"
            name: artifactory-volume
      volumes:
      - name: artifactory-volume
        persistentVolumeClaim:
          claimName: artifactory-claim
---
apiVersion: v1
kind: Service
metadata:
  name: artifactory
  labels:
    app: artifactory
    group: artifactory-k8s
spec:
  type: NodePort
  ports:
  - port: 8081
    protocol: TCP
  selector:
    app: artifactory
